--- a/EAMinimalApi/appsettings.json
+++ b/EAMinimalApi/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Angles": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AnglesDB;Integrated Security=True;Connect Timeout=60;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    //"Angles": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AnglesDB;Integrated Security=True;Connect Timeout=60;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "Angles": "Server=tcp:steelprofiles.database.windows.net,1433;Initial Catalog=AnglesDB;Persist Security Info=False;User ID=EAAdmin;Password=EASteelProfiles123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "Channels": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ChannelsDB;Integrated Security=True;Connect Timeout=60;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
