--- a/EngDataApi/appsettings.json
+++ b/EngDataApi/appsettings.json
@@ -14,7 +14,7 @@
   },
 
   "ConnectionStrings": {
-    "EngDataDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EngDataDB;Integrated Security=True;Connect Timeout=60;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "EngDataDB": "Server=tcp:steelprofiles.database.windows.net,1433;Initial Catalog=EngDataDB;Persist Security Info=False;User ID=EAAdmin;Password=EAEngDataDBs123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"EngDataDB": "Server=tcp:steelprofiles.database.windows.net,1433;Initial Catalog=EngDataDB;Persist Security Info=False;User ID=EAAdmin;Password=EAEngDataDBs123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
   }
 }
