--- a/EngDataApi/appsettings.json
+++ b/EngDataApi/appsettings.json
@@ -14,7 +14,6 @@
   },
 
   "ConnectionStrings": {
-    "EngDataDB": "Server=tcp:steelprofiles.database.windows.net,1433;Initial Catalog=EngDataDB;Persist Security Info=False;User ID=EAAdmin;Password=EAEngDataDBs123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    //"EngDataDB": "Server=tcp:steelprofiles.database.windows.net,1433;Initial Catalog=EngDataDB;Persist Security Info=False;User ID=EAAdmin;Password=EAEngDataDBs123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "EngDataDB": "Server=tcp:engdatadbserver.database.windows.net,1433;Initial Catalog=EngDataDB;Persist Security Info=False;User ID=EAAdmin;Password=EAEngDataDBs123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
