--- a/EngDataApi/EngDataApi.csproj
+++ b/EngDataApi/EngDataApi.csproj
@@ -19,8 +19,9 @@
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.1" />
 	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\CodeLibrary\DataAccess\DataAccess.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\CodeLibrary\DataAccess\DataAccess.csproj" />
+	  <ProjectReference Include="..\..\CodeLibrary\DataBaseSetup\EngDataApiClassLibrary.csproj" />
+	</ItemGroup>
 
 </Project>
