--- a/TestApp/TestApp.csproj
+++ b/TestApp/TestApp.csproj
@@ -10,5 +10,15 @@
   <ItemGroup>
     <ProjectReference Include="..\..\CodeLibrary\DataAccess\DataAccess.csproj" />
   </ItemGroup>
+		<ItemGroup>
+		<PackageReference Include="Dapper" Version="2.1.35" />
+		<PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.0-preview1.24240.8" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0-rc.1.24431.7" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
+		<PackageReference Include="EPPlus" Version="7.0.10" />
+
+	</ItemGroup>	
 
 </Project>
